Day 6 Part 2 Unsolved: Mathematically solved

--- a/day6/Cargo.toml
+++ b/day6/Cargo.toml
@@ -3,7 +3,6 @@ name = "day6"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+num-bigfloat = "1.7.0"
 num-traits = "0.2.17"
